# code-vs-zombie

./: LICENSE  README.md  codeingame.py  pyproject.toml  test.md  test_codeingame.py  test_simone.txt
.github/workflow/: ci.yml  python-package.yml
.github/workflows/: ci.yml  python-package.yml
simulations/: 2_zombies.siml  2_zombies_redux.siml  3_vs_3.siml  columns_of_death.siml  combo_opportunity.siml  cross.siml  devastation.siml  flanked.siml  grave_danger.siml  grid.siml  hoard.siml  rectangle.siml  rescue_mission.siml  rows_to_defend.siml  rows_to_defend_redux.siml  scared_human.siml  simple.siml  split_2th_reflex.siml  swervy_pattern.siml  triangle.siml  unavoidable_death.siml
simulator/: __init__.py
