[tool.poetry]
name = "code-vs-zombie"
version = "0.0.4"
description = ""
authors = ["Giovanni Cardamone <g.cardamone2@gmail.com>"]
license = "MIT"

packages = [
	{ include="simulator", from="." },
]

[tool.poetry.dependencies]
python = "^3.7"
docopt = "^0.6.2"
python-dotenv = "^0.15.0"
pygame = "^2.0.0"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.8.4"

[tool.poetry.scripts]
simulator="simulator:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
